src/test/ui/rfc-2632-const-trait-impl/call-generic-method-nonconst.stderr
error[E0277]: can't compare `S` with `S`
  --> $DIR/call-generic-method-nonconst.rs:19:34
   |
LL | const fn equals_self<T: PartialEq>(t: &T) -> bool {
   |                         --------- required by this bound in `equals_self`
...
LL | pub const EQ: bool = equals_self(&S);
   |                                  ^^ no implementation for `S == S`
   |
   = help: the trait `PartialEq` is not implemented for `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
